# arazzo-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  features.md  go.mod  go.sum
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-internal.yml  release.yml  vscode-release.yml
cmd/arazzo/: main.go
crates/arazzo-cli/: Cargo.toml
crates/arazzo-cli/src/: cli.rs  debug_handler.rs  generate.rs  handlers.rs  main.rs  output.rs  run_context.rs  trace.rs
crates/arazzo-cli/tests/: cli_contract_snapshots.rs  cli_debug_smoke.rs  cli_integration.rs  schema_drift.rs
crates/arazzo-cli/tests/snapshots/: list.json  replay.json  run-dry-run.json  run-missing-workflow.json  run-trace-dry-run.json  run-trace-failure.json  validate.json
crates/arazzo-debug-adapter/: Cargo.toml
crates/arazzo-debug-adapter/src/: dap.rs  lib.rs  main.rs  session.rs  stdio.rs
crates/arazzo-debug-adapter/src/dap/: events.rs  requests.rs  responses.rs
crates/arazzo-debug-adapter/tests/: dap_test_support.rs  dap_transcript_breakpoints.rs  dap_transcript_checkpoints.rs  dap_transcript_initialize.rs  dap_transcript_launch.rs  dap_transcript_stepping.rs  dap_transcript_termination.rs  dap_transcript_watches.rs  session_smoke.rs
crates/arazzo-debug-protocol/: Cargo.toml
crates/arazzo-debug-protocol/src/: lib.rs
crates/arazzo-expr/: Cargo.toml
crates/arazzo-expr/benches/: expression.rs
crates/arazzo-expr/proptest-regressions/: lib.txt
crates/arazzo-expr/src/: lib.rs
crates/arazzo-runtime/: Cargo.toml
crates/arazzo-runtime/benches/: criteria.rs
crates/arazzo-runtime/src/: debug.rs  lib.rs  runtime_core.rs
crates/arazzo-runtime/src/debug/: breakpoints.rs  controller.rs  evaluate.rs  scopes.rs  stack.rs
crates/arazzo-runtime/src/runtime_core/: engine_actions.rs  engine_http.rs  engine_impl.rs  engine_parallel.rs  engine_trace.rs  helpers.rs  input_validation.rs
crates/arazzo-runtime/tests/: debug_breakpoints.rs  debug_checkpoints.rs  debug_evaluate.rs  debug_stepping.rs  engine_execution.rs  engine_parallel.rs  engine_replay.rs  engine_soap.rs  engine_workflow.rs  input_validation.rs
crates/arazzo-runtime/tests/common/: mod.rs
crates/arazzo-spec/: Cargo.toml
crates/arazzo-spec/src/: lib.rs
crates/arazzo-spec/tests/: serde_roundtrip.rs
crates/arazzo-validate/: Cargo.toml
crates/arazzo-validate/src/: lib.rs
docs/: architecture.md  debugger-protocol-v1.md  debugger-troubleshooting.md  debugger-user-guide.md  extension-guide.md  index.html  internal-api-v1.md  internal-release.md  trace-schema-changelog.md  trace-schema-v1.md  vscode-marketplace-release-plan.md
docs/schemas/: catalog.schema.json  list.schema.json  replay.schema.json  run.schema.json  show.schema.json  trace-v1.schema.json  validate.schema.json
examples/: README.md  auth-flow.arazzo.yaml  error-handling-retry.arazzo.yaml  httpbin-auth.arazzo.yaml  httpbin-chained-posts.arazzo.yaml  httpbin-components.arazzo.yaml  httpbin-conditions.arazzo.yaml  httpbin-data-flow.arazzo.yaml  httpbin-error-handling.arazzo.yaml  httpbin-get.arazzo.yaml  httpbin-methods.arazzo.yaml  httpbin-parallel.arazzo.yaml  httpbin-response-headers.arazzo.yaml  httpbin-reusable-inputs.arazzo.yaml  multi-api-orchestration.arazzo.yaml  petstore-crud.arazzo.yaml  soap-customer-crud.arazzo.yaml  sub-workflow.arazzo.yaml  swagger-petstore-crud.arazzo.yaml  swagger-petstore.openapi.json
parser/: parser.go  parser_test.go  types.go  validate.go  validate_test.go
runtime/: client.go  engine.go  engine_test.go  expressions.go  expressions_test.go  parallel.go  vars.go  vars_test.go
rust/crates/arazzo-cli/src/: main.rs
rust/crates/arazzo-cli/tests/: cli_integration.rs
rust/crates/arazzo-expr/src/: lib.rs
rust/crates/arazzo-runtime/src/: lib.rs
rust/crates/arazzo-spec/: Cargo.toml
rust/crates/arazzo-spec/src/: lib.rs
scripts/ci/: perf-baseline.sh  verify-private-workspace.sh
scripts/release/: cut-tag.sh  verify-downloaded-release.sh  verify-local-release.sh
testdata/: error-handling.arazzo.yaml  petstore.openapi.yaml
vscode-arazzo-debug/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-arazzo-debug/scripts/: copy-binary.js
vscode-arazzo-debug/src/: adapterClient.ts  breakpointMapper.ts  debugConfigProvider.ts  extension.ts  yamlStepIndex.ts
vscode-arazzo-debug/src/test/: smoke.test.ts
vscode-arazzo-debug/syntaxes/: arazzo.tmLanguage.json
