[workspace]
members = [
  "crates/arazzo-spec",
  "crates/arazzo-validate",
  "crates/arazzo-expr",
  "crates/arazzo-runtime",
  "crates/arazzo-cli",
  "crates/arazzo-debug-adapter",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
description = "Standalone Arazzo 1.0 workflow executor and debugger"
keywords = ["arazzo", "openapi", "workflow", "api", "cli"]
categories = ["command-line-utilities", "web-programming"]
repository = "https://github.com/strefethen/arazzo-cli"
homepage = "https://github.com/strefethen/arazzo-cli"
readme = "README.md"
publish = false

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
debug = true

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"
todo = "deny"
