[package]
name = "arazzo-cli"
description = "CLI for executing and debugging Arazzo 1.0.1 API workflow specifications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arazzo-debug-adapter = { path = "../arazzo-debug-adapter" }
arazzo-spec = { path = "../arazzo-spec" }
arazzo-runtime = { path = "../arazzo-runtime", features = ["schema"] }
arazzo-validate = { path = "../arazzo-validate" }
clap = { version = "4", features = ["derive"] }
humantime = "2"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
