[package]
name = "arazzo-cli"
description = "CLI for executing Arazzo 1.0 API workflow specifications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arazzo-spec = { path = "../arazzo-spec" }
arazzo-runtime = { path = "../arazzo-runtime", features = ["schema"] }
arazzo-validate = { path = "../arazzo-validate" }
clap = { version = "4", features = ["derive"] }
humantime = "2"
indexmap = "2"
openapiv3 = "2"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
url = "2"
