[package]
name = "arazzo-debug-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
arazzo-debug-protocol = { path = "../arazzo-debug-protocol" }
arazzo-runtime = { path = "../arazzo-runtime" }
arazzo-validate = { path = "../arazzo-validate" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tiny_http = "0.12"
