[package]
name = "arazzo-debug-adapter"
description = "Debug Adapter Protocol server for Arazzo workflow debugging"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arazzo-runtime = { path = "../arazzo-runtime" }
arazzo-validate = { path = "../arazzo-validate" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tiny_http = "0.12"
