[package]
name = "arazzo-debug-adapter"
description = "Debug Adapter Protocol server for Arazzo workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arazzo-runtime = { path = "../arazzo-runtime" }
arazzo-validate = { path = "../arazzo-validate" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-util = "0.7"

[dev-dependencies]
tiny_http = "0.12"
