[package]
name = "arazzo-expr"
description = "Expression language parser and evaluator for Arazzo 1.0.1 workflow specifications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
once_cell = "1"
regex = "1"
serde_json = "1"

[dev-dependencies]
proptest = "1"
