[package]
name = "arazzo-expr"
description = "Arazzo expression language parser and evaluator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
regex = "1"
serde_json = "1"

[dev-dependencies]
criterion = { workspace = true }
proptest = "1"

[[bench]]
name = "expression"
harness = false
