[package]
name = "arazzo-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
arazzo-expr = { path = "../arazzo-expr" }
arazzo-spec = { path = "../arazzo-spec" }
arazzo-validate = { path = "../arazzo-validate" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sxd-document = "0.3"
sxd-xpath = "0.4"
url = "2"

[dev-dependencies]
tiny_http = "0.12"
