[package]
name = "arazzo-runtime"
description = "Execution engine for Arazzo 1.0.1 API workflow specifications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
arazzo-expr = { path = "../arazzo-expr" }
arazzo-spec = { path = "../arazzo-spec" }
arazzo-validate = { path = "../arazzo-validate" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sxd-document = "0.3"
sxd-xpath = "0.4"
url = "2"
schemars = { version = "1", optional = true }

[features]
schema = ["schemars"]

[dev-dependencies]
proptest = "1"
tiny_http = "0.12"
