[package]
name = "arazzo-runtime"
description = "Arazzo workflow execution engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arazzo-expr = { path = "../arazzo-expr" }
arazzo-spec = { path = "../arazzo-spec" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
sxd-document = "0.3"
sxd-xpath = "0.4"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-util = "0.7"
url = "2"
schemars = { version = "1", optional = true }

[features]
schema = ["schemars"]

[dev-dependencies]
proptest = "1"
tiny_http = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
