[package]
name = "arazzo-spec"
description = "Typed Arazzo 1.0.1 domain model for API workflow specifications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
