[package]
name = "arazzo-spec"
description = "Typed Arazzo 1.0 domain model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
