[package]
name = "arazzo-validate"
description = "Arazzo YAML parser and structural validator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arazzo-spec = { path = "../arazzo-spec" }
serde_yaml_ng = "0.10"
